# an-farmview

./: .gitignore  Procfile  README.md  env_template.txt  pyproject.toml  record_temp.bat
an_farmview/: config.py  crud.py  database.py  main.py  models.py  schemas.py  snmp.py  ubl.py  webserver.py
an_farmview/client/: envmonitor.py  record_temp.bat  ubl.py
an_farmview/static/css/: style.css
an_farmview/templates/: home.html  temperatures.html
migrations/: env.py
migrations/versions/: 2541a2c58e68_added_nuke_ubl.py  3c72fb5ef7b1_added_vray_ubl.py  694393708231_added_vray_ubl.py  a570e2da95c7_added_vray_ubl_col.py  e7d7e542dcad_added_vray_ubl2.py
