[tool.poetry]
name = "an-farmview"
version = "0.1.0"
description = ""
authors = ["Simon Reeves <simonreeves@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "an_farmview"}]

[tool.poetry.dependencies]
python = "^3.8"
pysnmplib = "^5.0.21"
flask = "^2.2.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
