[tool.poetry]
name = "an-farmview"
version = "0.1.0"
description = ""
authors = ["Simon Reeves <simonreeves@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "an_farmview"}]

[tool.poetry.dependencies]
python = "3.11.3"
pysnmplib = "^5.0.21"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.95.1"}
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
